--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,17 @@
-absl-py==0.8.0
-astor==0.8.0
-certifi==2019.9.11
 chardet==3.0.4
-cycler==0.10.0
 deepctr==0.6.1
-gast==0.3.2
-google-pasta==0.1.7
-grpcio==1.23.0
-h5py==2.10.0
-idna==2.8
 joblib==0.13.2
-Keras==2.3.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
+Keras==2.3.1
 lightgbm==2.2.3
 Markdown==3.1.1
 matplotlib==3.1.1
 numpy==1.17.2
 pandas==0.25.1
-protobuf==3.9.2
-pyparsing==2.4.2
-python-dateutil==2.8.0
-pytz==2019.2
-PyYAML==5.1.2
 requests==2.22.0
 scikit-learn==0.21.3
 scikit-surprise==1.1.0
 scipy==1.3.1
-six==1.12.0
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
-termcolor==1.1.0
-urllib3==1.25.5
-Werkzeug==0.16.0
-wrapt==1.11.2
+tqdm=4.37.0
